Tidied up profile page, making buttons display horizontally

--- a/music-visualizer/src/app/pages/Profile-Page/profile-page.component.css
+++ b/music-visualizer/src/app/pages/Profile-Page/profile-page.component.css
@@ -152,4 +152,11 @@ body {
   font-family: Merriweather,Helvetica Neue,Arial,sans-serif;
 }
 
+#userButtonsParent {
+    display: flex;
+}
 
+#userButtons {
+    padding-left: 1%;
+    padding-right: 1%;
+}
