--- a/music-visualizer/src/app/pages/Profile-Page/profile-page.component.html
+++ b/music-visualizer/src/app/pages/Profile-Page/profile-page.component.html
@@ -28,19 +28,21 @@
       
 
       <h1 class="text-uppercase"><strong>{{this.userData.name}}</strong></h1>
-      <p>  </p>
       <p> {{this.userData.email}} </p>
 
-      <div class="form-group">
+      <div style="display: flex; padding: 2%">
         <button class="btn btn-primary btn-block" type="submit">Change name</button>
+        <p style="margin-left: 2%">　</p> <!-- this is terrible-->
         <button class="btn btn-primary btn-block" type="submit" (click)="passwordReset()">Change password</button>
-        <button class="btn btn-primary btn-block" type="submit" (click)="this.spotifyLinked=true">Link Spotify</button>
+        <p style="margin-left: 2%">　</p>
+        <button class="btn btn-primary btn-block" type="submit"(click)="logout()">Log Out</button>
       </div>
 
-      <div style="margin-top: 30%;width: 100%;text-align: center;">
-        <p>To go back to the visualization page <a class="btn btn-primary btn-xl js-scroll-trigger" role="button" (click)="goBackToVisualPage()">click here.</a></p>
-        <p>To logout of your account <a class="btn btn-primary btn-xl js-scroll-trigger" role="button" (click)="logout()">click here.</a></p>
+      <div>
+
       </div>
+
+      
     </div>
   </header>
 
