Link spotify button is now functional

--- a/music-visualizer/src/app/pages/Profile-Page/profile-page.component.html
+++ b/music-visualizer/src/app/pages/Profile-Page/profile-page.component.html
@@ -40,7 +40,7 @@
 
       <div>
         <div style="display: inline-block; width: 20%; margin: 2%;">
-          <a (click)="passwordReset()">
+          <a (click)="authorizeSpotify()">
             <img src="../../../assets/icons/spotifyLogo.svg.png" style="width: 70%; height: auto">
           </a>
           <p>Link Spotify</p>
