UI Spotify integration, transition equation

--- a/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.html
+++ b/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.html
@@ -37,6 +37,13 @@
         <img src="../../../assets/icons/mic.svg">
       </a>
     </div>
+
+    <div class="upload-item">
+      <p>Play music from your Spotify account</p>
+      <a id="load-spotify" (click)="loadSpotify()">
+        <img src="../../../assets/icons/spotify.svg">
+      </a>
+    </div>
   </div>
 
   <div id="edit-menu" style="width: 0%; opacity: 0;">
