additional modularization for spotify and working on viz algo for spotify

--- a/music-visualizer/src/app/pages/Profile-Page/profile-page.component.html
+++ b/music-visualizer/src/app/pages/Profile-Page/profile-page.component.html
@@ -10,7 +10,7 @@
 
 <body id="page-top">
   <nav class="navbar navbar-light navbar-expand-lg fixed-top" id="mainNav">
-    <div class="container"><a class="navbar-brand js-scroll-trigger" routerLink="../">The Music Visualizer</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-align-justify"></i></button>
+    <div class="container"><a class="navbar-brand js-scroll-trigger" (click)="goBackToVisualPage()">The Music Visualizer</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-align-justify"></i></button>
       <div class="collapse navbar-collapse" id="navbarResponsive"></div>
     </div>
   </nav>
@@ -24,8 +24,8 @@
           <hr />
         </div>
       </div>
-      
-      
+
+
 
       <h1 class="text-uppercase"><strong>{{this.userData.name}}</strong></h1>
       <p> {{this.userData.email}} </p>
@@ -45,7 +45,7 @@
           </a>
           <p>Link Spotify</p>
         </div>
-    
+
         <div style="display: inline-block; width: 20%; margin: 2%;">
           <a (click)="this.spotifyLinked = false">
             <img src="../../../assets/icons/soundcloud-2.svg" style="width: 100%; height: auto">
