Broken scene switch

--- a/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.css
+++ b/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.css
@@ -103,6 +103,7 @@ input[type=range] {
   margin-left: 20%;
   vertical-align: middle;
   padding: 3%;
+  border: 5px black solid;
 }
 
 .select-img {
