--- a/music-visualizer/src/app/pages/About-Page/about-page.component.html
+++ b/music-visualizer/src/app/pages/About-Page/about-page.component.html
@@ -26,6 +26,8 @@
       <p>
         “Fantasy Sky Background” (https://skfb.ly/6u9DR) by Hannes Delbeke is licensed under Creative Commons Attribution (http://creativecommons.org/licenses/by/4.0/).
       </p>
+      <p>"Shark" (https://skfb.ly/6YsQn) by Greg is licensed under Creative Commons Attribution (http://creativecommons.org/licenses/by/4.0/).</p>
+      <p>"WaveScene" https://threejs.org/examples/webgl_shaders_ocean.html by THREEjs provided us with THREEjs geometry used in the scene.</p>
       <p class="text-faded mb-5" style="white-space: pre-line;">{{readme}}</p>
     </div>
   </div>
