--- a/music-visualizer/src/app/pages/About-Page/about-page.component.html
+++ b/music-visualizer/src/app/pages/About-Page/about-page.component.html
@@ -24,13 +24,23 @@
     <div class="col-lg-8 mx-auto">
       <p>Credits:</p>
       <p>
-        “Fantasy Sky Background” (https://skfb.ly/6u9DR) by Hannes Delbeke is licensed under Creative Commons Attribution (http://creativecommons.org/licenses/by/4.0/).
+        <a href="https://skfb.ly/6u9DR">
+        “Fantasy Sky Background” by Hannes Delbeke </a> is licensed under Creative Commons Attribution (http://creativecommons.org/licenses/by/4.0/).
       </p>
       <p>
-        “The Making of “The Aviator”: Animating a Basic 3D Scene with Three.js” (http://creativecommons.org/licenses/by/4.0/) by Karim Maaloul.
+        <a
+        href="https://tympanus.net/codrops/2016/04/26/the-aviator-animating-basic-3d-scene-threejs/"> “The Making of “The Aviator”: Animating a Basic 3D Scene with Three.js” by Karim Maaloul.</a>
       </p>
-      <p>"Shark" (https://skfb.ly/6YsQn) by Greg is licensed under Creative Commons Attribution (http://creativecommons.org/licenses/by/4.0/).</p>
-      <p>"WaveScene" (https://threejs.org/examples/webgl_shaders_ocean.html) by THREEjs provided us with THREEjs geometry used in the scene.</p>
+      <p>
+        <a href="https://skfb.ly/6YsQn">
+        "Shark" </a> by Greg is licensed under Creative Commons Attribution (http://creativecommons.org/licenses/by/4.0/).</p>
+      <p>
+        <a href="https://threejs.org/examples/webgl_shaders_ocean.html">
+        "WaveScene"</a> sourced from THREEjs examples.</p>
+      <p>
+        <a href="https://medium.com/@mag_ops/music-visualiser-with-three-js-web-audio-api-b30175e7b5ba">
+          "Music Visualizer with THREE.js & Web Audio Api"</a> by Prakhar Bhardwaj was used as an initial tutorial to understand how to use Threejs alongside
+        the Web Audio Api.</p>
       <p class="text-faded mb-5" style="white-space: pre-line;">{{readme}}</p>
     </div>
   </div>
