--- a/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.css
+++ b/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.css
@@ -71,12 +71,12 @@ input[type=range] {
 
 .overlay {
   text-align: center;
-  height: 10%;
+  height: 12%;
   width: 100%;
   opacity: 1;
   position: fixed;
   z-index: 1;
-  top: 90%;
+  top: 88%;
   left: 0;
   background-color: rgba(0,0,0, 0.4);
   overflow-x: hidden;
@@ -183,6 +183,7 @@ input[type=range] {
   bottom: 12%;
   left: 85%;
   text-align: center;
+  color: black;
   padding: 1%;
   opacity: 0;
   width: 0%;
@@ -236,7 +237,7 @@ input[type=range] {
   position: absolute;
   width: 100%;
   margin: 0;
-  top: 70%;
+  top: 75%;
 }
 
 #settings {
