--- a/music-visualizer/src/app/pages/Profile-Page/profile-page.component.html
+++ b/music-visualizer/src/app/pages/Profile-Page/profile-page.component.html
@@ -31,8 +31,6 @@
       <p> {{this.userData.email}} </p>
 
       <div style="display: flex; padding: 2%">
-        <button class="btn btn-primary btn-block" type="submit">Change name</button>
-        <p style="margin-left: 2%">　</p> <!-- this is terrible-->
         <button class="btn btn-primary btn-block" type="submit" (click)="passwordReset()">Change password</button>
         <p style="margin-left: 2%">　</p>
         <button class="btn btn-primary btn-block" type="submit"(click)="logout()">Log Out</button>
@@ -50,7 +48,14 @@
           <a (click)="this.spotifyLinked = false">
             <img src="../../../assets/icons/soundcloud-2.svg" style="width: 100%; height: auto">
           </a>
-          <p>Link Soundcloud</p>
+          <p>Link SoundCloud</p>
+        </div>
+
+        <div style="display: inline-block; width: 20%; margin: 2%;">
+          <a (click)="this.spotifyLinked = false">
+            <img src="../../../assets/icons/youtubeLogo.png" style="width: 100%; height: auto">
+          </a>
+          <p>Link YouTube</p>
         </div>
       </div>
 
