--- a/music-visualizer/src/app/pages/Introduction-Page/Introduction-page.component.html
+++ b/music-visualizer/src/app/pages/Introduction-Page/Introduction-page.component.html
@@ -48,8 +48,12 @@
       <p class="text-faded mb-5">
         This application is prone to causing seizures due to fast moving visuals and changing colors. If you are epileptic, please be mindful.
       </p>
-      <p class="text-faded mb-5">
-        Click the info on the upper right corner to access keyboard controls.
+      <p class="text-faded mb-5" style="font-size: medium;">
+        <li>Click the info on the upper right corner to access keyboard controls.</li>
+        <li>The on screen control menu will appear when your mouse is moved.</li>
+        <li>Press the upload button on this menu to select a source to visualize from, and press it again to turn this menu off.</li>
+        <li>Press the profile icon button next to this to go to the profile page, and click the music visualization button at the top of the screen to return to the visualization.</li>
+        <li>After you've linked your Spotify account, go into a device where Spotify is logged in and select 'MusicVisualizer' in Connect a Device</li>
       </p>
       <a class="btn btn-primary btn-xl js-scroll-trigger" role="button" routerLink="../VisualizationPage"> Continue to visualizations page </a>
     </div>
