--- a/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.css
+++ b/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.css
@@ -203,6 +203,7 @@ input[type=range] {
 
 #edit-menu {
   position: absolute;
+  color: black !important;
   bottom: 12%;
   left: 85%;
   text-align: center;
