--- a/music-visualizer/src/app/pages/Login-Page/login-page.component.css
+++ b/music-visualizer/src/app/pages/Login-Page/login-page.component.css
@@ -1,5 +1,10 @@
 @import url('../../../assets/bootstrap/css/bootstrap.min.css');
 
+mat-error {
+  margin: 0;
+  font-size: small;
+}
+
 #mainNav {
   background-color: midnightblue !important;
 }
@@ -52,6 +57,7 @@
   max-width: 300px;
   width: 90%;
   line-height: 30px;
+  margin: 0;
 }
 
 .login-dark form .btn-primary {
