--- a/music-visualizer/src/app/pages/Profile-Page/profile-page.component.html
+++ b/music-visualizer/src/app/pages/Profile-Page/profile-page.component.html
@@ -11,7 +11,11 @@
 <body id="page-top">
   <nav class="navbar navbar-light navbar-expand-lg fixed-top" id="mainNav">
     <div class="container"><a class="navbar-brand js-scroll-trigger" (click)="goBackToVisualPage()">The Music Visualizer</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-align-justify"></i></button>
-      <div class="collapse navbar-collapse" id="navbarResponsive"></div>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item"><a class="nav-link js-scroll-trigger" routerLink="../AboutPage">About Us</a></li>
+          </ul>
+      </div>
     </div>
   </nav>
 
@@ -37,11 +41,11 @@
       </div>
 
       <div>
-        <div style="display: inline-block; width: 20%; margin: 2%;">
-          <a (click)="authorizeSpotify()">
-            <img src="../../../assets/icons/spotifyLogo.svg.png" style="width: 70%; height: auto">
-          </a>
-          <p>Link Spotify</p>
+        <div style="display: inline-block; width: 25%; margin: 2%;">
+          <button [disabled]="isSpotifyAuthorized()" (click)="authorizeSpotify()" style="padding: 3%; width: 100%; border-radius: 100px; background-color: rgb(53, 212, 53);">
+            <img src="../../../assets/icons/spotifywhite.svg" style="display: inline; width: 10%; height: 10%; margin-right: 5%; stroke: white;">
+            <p style="display: inline; color: white; font-weight: 600; font-size: large; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">{{spotifyText()}}</p>
+          </button>
           <p>* Spotify Premium Membership Required *</p>
         </div>
 
