--- a/music-visualizer/src/app/pages/Register-Page/register-page.component.html
+++ b/music-visualizer/src/app/pages/Register-Page/register-page.component.html
@@ -41,6 +41,10 @@
       <div class="form-group">
         <div class="form-check"><label class="form-check-label" style="color: white;"><input class="form-check-input" type="checkbox" formControlName="acceptTerms">I agree to the license terms.</label></div>
       </div>
+      <div style="text-align: left;">
+        <input style="display: inline-block; width: auto !important; margin-right: 1%;" type="checkbox" (change)="updateCookieUsage($event)">
+        <p style="display: inline-block;">Remember me?</p>
+      </div>
       <div class="form-group">
         <button class="btn btn-primary btn-block" type="submit" [disabled]="this.signUpForm.invalid">Sign Up</button>
       </div>
