Minor bug fixes and UI updates

--- a/music-visualizer/src/app/pages/Profile-Page/profile-page.component.css
+++ b/music-visualizer/src/app/pages/Profile-Page/profile-page.component.css
@@ -161,16 +161,6 @@ body {
     padding-right: 1%;
 }
 
-#upload-menu {
-    float: center;
-    top: 20%;
-    border-radius: 15px;
-    left: 10%;
-    padding: 5%;
-    background-color: rgb(255, 255, 255, 0.5);
-    color: black;
-    width: 80%;
-    height: 50%;
-    text-align: center;
-    transition: 0.1s 0.2s;
-  }
+#spotify img {
+  filter: invert(100%);
+}
