--- a/music-visualizer/src/app/pages/Profile-Page/profile-page.component.html
+++ b/music-visualizer/src/app/pages/Profile-Page/profile-page.component.html
@@ -41,10 +41,15 @@
       </div>
 
       <div>
-        <div style="display: inline-block; width: 25%; margin: 2%;">
+        <div id="spotify" style="display: inline-block; width: 25%; margin: 2%;">
           <button [disabled]="isSpotifyAuthorized()" (click)="authorizeSpotify()" style="padding: 3%; width: 100%; border-radius: 100px; background-color: rgb(53, 212, 53);">
-            <img src="../../../assets/icons/spotifywhite.svg" style="display: inline; width: 10%; height: 10%; margin-right: 5%; stroke: white;">
-            <p style="display: inline; color: white; font-weight: 600; font-size: large; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">{{spotifyText()}}</p>
+            <div style="display: inline-block; height: 100%; width: 10%; margin-right: 3%;">
+              <img src="../../../assets/icons/spotify.svg" style="width: 100%; height: 10%; stroke: white; padding-bottom: 15%;">
+            </div>
+
+            <div style="display: inline-block; height: 100%;">
+              <p style="color: white; font-weight: 600; margin: 0; font-size: large; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">{{spotifyText()}}</p>
+            </div>
           </button>
           <p>* Spotify Premium Membership Required *</p>
         </div>
