--- a/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.html
+++ b/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.html
@@ -29,7 +29,7 @@
           <br>
         </div>
 
-        <input type="file" id="load-file" name="load-file" (change)="loadFilePath($event.target)" accept="audio/*" capture>
+        <input type="file" id="load-file" name="load-file" (input)="loadFilePath($event.target)" accept="audio/*" capture>
 
         <p class="select-text">Local files</p>
       </div>
@@ -106,7 +106,7 @@
     </div>
   </div>
 
-  <div id="menu" class="overlay">
+  <div id="menu" style="color:white;" class="overlay glass-pane">
     <div class="overlay-content">
       <!--Song controls-->
       <div class="controls">
