--- a/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.css
+++ b/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.css
@@ -1,3 +1,8 @@
+root {
+  --text-color: black;
+  --image-invert: invert(0%);
+}
+
 /******************************************************************************
                                 HTML Elements
 ******************************************************************************/
@@ -6,7 +11,6 @@ button {
   display: inline-block;
   outline: none;
   border: none;
-  color: white;
   background-color: rgba(0, 0, 0, 0);
 }
 
@@ -63,9 +67,10 @@ input[type=range] {
 .glass-pane {
   background-color: rgba(255, 255, 255, 0.15);
   border-radius: 15px;
-  border: 1px rgba(255, 255, 255, 0.15) solid;
-  backdrop-filter: blur(5px);
+  border: 2px rgba(255, 255, 255, 0.15) solid;
+  backdrop-filter: blur(8px);
   box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.2);
+  color: var(--text-color) !important;
 }
 
 .overlay {
@@ -76,14 +81,14 @@ input[type=range] {
   position: fixed;
   z-index: 1;
   top: 90%;
-  left: 0;
+  left: 0%;
   overflow-x: hidden;
   overflow-y: hidden;
   transition: 0.2s;
 }
 
 .overlay img {
-  filter: invert(100%);
+  filter: var(--image-invert);
 }
 
 .overlay-content {
@@ -99,19 +104,34 @@ input[type=range] {
   position: fixed;
   z-index: 1;
   top: 0%;
-  left: 0;
-  background-color: rgba(0,0,0, 0.4);
+  left: 0%;
   overflow-x: hidden;
   overflow-y: hidden;
   transition: 0.2s;
 }
 
-.overlay-top-button{
-  background-color: rgba(0,0,0, 0.4);
-  border: 1px solid rgba(0,0,0, 0.4);
-  padding: 10px 24px;
+.overlay-top button {
+  margin: 3px;
+  padding: 3px 30px;
+  background-color: rgba(255, 255, 255, 0.15);
+  border: 1px solid rgba(255, 255, 255, 0.15);
   text-align: center;
   display: inline-block;
+  border-radius: 15px;
+  height: 100%;
+  font-weight: 600;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  color: var(--text-color) !important;
+}
+
+.overlay-top button:hover {
+  background-color: rgba(255, 255, 255, 0.3);
+  border: 1px solid rgba(255, 255, 255, 0.5);
+}
+
+.overlay-top button:disabled {
+  background-color: rgba(0, 0, 0, 0.15);
+  border: 2px solid rgba(0, 0, 0, 0.3);
 }
 
 .progress {
@@ -240,7 +260,6 @@ input[type=range] {
 
 #info-menu {
   text-align: left;
-  color: white;
   opacity: 0;
   height: 20%;
   width: 0%;
@@ -305,7 +324,6 @@ input[type=range] {
   top: 20%;
   left: 20%;
   padding: 5%;
-  color: black;
   width: 60%;
   height: 50%;
   text-align: center;
